Refer to ChangeLog for detailed per-file info.

caspar version 20120508 - The Sint Katelijne Release

[Joost van Baal-Ilić]
- caspar/doc/Makefile.am: assume html is in utf8; this fixes a bug
  introduced in version 20120420: manpages were empty.


caspar version 20120420 - The Lamprais Release, for Danishka Navin

[Joost van Baal-Ilić]
- caspar/script/csp_sucp: csp_sucp now honors CSP_DEBUG
- caspar/NEWS, caspar/doc/caspar.azm: document new csp_PUSH
  interface, support for csp_XARG is dropped
- caspar/mk/caspar.mk: add (undocumented) target "debug". fix bug,
  caspar now somewhat usable again.


caspar version 20120417 - The Kokki Release

[Joost van Baal-Ilić]
- We now support installing multiple local files in one scp call.
  The destination directory of a push script is now passed as the first
  argument. Therefore, one can now implement one's own push mechanism in a
  more efficient way.  The arguments of a push implementation can get shifted,
  one can treat remaining args as "$@". E.g.:
  FIXME
- user interface for caspar helpers csp_* changed in INCOMPATIBLE way.
- if you've written your own csp_PUSH implementation, update it. arguments
  now are <[user@]host> <dir> <file> (was:
  <file> <[user@]host> <dir> [<xarg>])
  + caspar/script/csp_sucp, caspar/script/csp_scp_keep_mode: swap
    arguments: now csp_* <[user@]host> <dir> <file> (was:
    <file> <[user@]host> <dir> [su-user])
  + caspar/script/csp_install: swap arguments: now
    csp_install <dir> <file>
- csp_DIFFXARG support reimplemented (in a slightly less flexible way)
- caspar/script/csp_sucp: fix bug in $CSP_SUCP_USER processing.


caspar version 20120322 - The Kothu Roti Release

[Joost van Baal-Ilić]
- caspar/mk/caspar.mk: backwards INCOMPATIBLE change: csp_CPDIRS and csp_CPDIR
  (and 'localtargets') are no longer honored.  If you'd like to use cp(1) to
  install to csp_CPDIR, define

   csp_UHOST = dummy
   csp_PUSH = $(csp_cp_FUNC)
